Adding meta tags and og:image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/shuffle-simple.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ranndy - Random Name Generator</title>
+    <meta
+      name="description"
+      content="Ranndy is a random name generator for use in fiction writing. Ranndy creates first and last names using U.S. Census data from 1880 to 2023."
+    />
+    <meta name="author" content="Simon Ganz" />
+    <meta property="og:image" content="./interface.png" />
   </head>
   <body>
     <div id="root"></div>
