Correcting og-image link and shrinking file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="Ranndy is a random name generator for use in fiction writing. Ranndy creates first and last names using U.S. Census data from 1880 to 2023."
     />
     <meta name="author" content="Simon Ganz" />
-    <meta property="og:image" content="./interface.png" />
+    <meta property="og:image" content="/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
